js/js.translator/testData/incremental/invalidation/interfaceWithJsExport/main/m.kt
fun box(): String {
    return FooImpl().foo()
}